# asdd

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  TRANSFER.md  USER_GUIDE.md  pyproject.toml  specs
asdd/: __init__.py  _schemas.py  audit.py  auth.py  bootstrap.py  doctor.py  lifecycle.py  project_container.py  registry.py  registry_reload.py  secrets.py  supervisor.py  workspace.py
asdd/contracts/: asdd-cli.schema.json  audit-log.schema.json  inbox-note.frontmatter.patch.schema.json  job-note.frontmatter.patch.schema.json  projects.yml.schema.json  result-note.frontmatter.patch.schema.json  schedule-entry.patch.schema.json
asdd/migrations/: m001_add_project_id_to_ledger.py  m002_stamp_project_id_on_legacy_notes.py
docker/: Dockerfile.project
docker/files/: asdd-run-job.sh  asdd-session.sh
project_skeleton/: Dockerfile.project.extras
tests/: conftest.py
tests/fixtures/: stub-claude.sh
tests/fixtures/projects.yml.invalid/: bad-id-regex.yml  malformed.yml  wrong-version.yml
tests/fixtures/projects.yml.valid/: empty.yml  one-project.yml  (+1 more)
tests/integration/: test_dispatch_us5.py  test_isolation_secrets_us6.py  test_open_us1_us2_us3.py  test_persistent_session_us1_us2_us5.py  test_subscription_auth_us1_us2_us3.py
tests/unit/: test_asdd_audit.py  test_asdd_lifecycle.py  test_asdd_migration_m002.py  test_asdd_migrations.py  test_asdd_registry.py  test_asdd_secrets.py  test_asdd_secrets_write.py  test_auth.py  test_bootstrap_auth.py  test_persistent_session.py  test_project_container.py  test_supervisor.py  test_workspace.py
